--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .inhalt {
-    margin-top: 80px;
+    margin-top: 75px;
 }
 .artikelbild {
     margin-top: 29px;
@@ -163,3 +163,11 @@
 
 hr {
   
+
+.meinecover {
+    margin-top: 8px;
+}
+
+.meine {
+    
+}
